force-app/main/default/objects/TestDataLakeObj_0108__dll/TestDataLakeObj_0108__dll.object-meta.xml
<CustomObject>
    <label>TestDataLakeObj_0108</label>
    <mktDataLakeAttributes>
        <creationType>Custom</creationType>
        <isEnabled>true</isEnabled>
        <objectCategory>Salesforce_SFDCReferenceModel_0_93.Related</objectCategory>
    </mktDataLakeAttributes>
</CustomObject>