force-app/main/default/objects/TestDataLakeObj_0108__dll/fields/application_date__c.field-meta.xml
<CustomField>
    <fullName>application_date__c</fullName>
    <label>application_date</label>
    <length>60</length>
    <mktDataLakeFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <externalName>application_date</externalName>
        <isEventDate>false</isEventDate>
        <isInternalOrganization>false</isInternalOrganization>
        <isRecordModified>false</isRecordModified>
        <usageTag>NONE</usageTag>
    </mktDataLakeFieldAttributes>
    <type>Text</type>
</CustomField>