force-app/main/default/objects/TestDataLakeObj_0108__dll/fields/insurance_period_end__c.field-meta.xml
<CustomField>
    <fullName>insurance_period_end__c</fullName>
    <label>insurance_period_end</label>
    <length>60</length>
    <mktDataLakeFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <externalName>insurance_period_end</externalName>
        <isEventDate>false</isEventDate>
        <isInternalOrganization>false</isInternalOrganization>
        <isRecordModified>false</isRecordModified>
        <usageTag>NONE</usageTag>
    </mktDataLakeFieldAttributes>
    <type>Text</type>
</CustomField>