force-app/main/default/objects/TestDataLakeObj_0108__dll/fields/number_of_locations__c.field-meta.xml
<CustomField>
    <fullName>number_of_locations__c</fullName>
    <label>number_of_locations</label>
    <mktDataLakeFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <externalName>number_of_locations</externalName>
        <isEventDate>false</isEventDate>
        <isInternalOrganization>false</isInternalOrganization>
        <isRecordModified>false</isRecordModified>
        <usageTag>NONE</usageTag>
    </mktDataLakeFieldAttributes>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>