force-app/main/default/objects/TestDataLakeObj_0108__dll/fields/payment_cycle__c.field-meta.xml
<CustomField>
    <fullName>payment_cycle__c</fullName>
    <label>payment_cycle</label>
    <length>60</length>
    <mktDataLakeFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <externalName>payment_cycle</externalName>
        <isEventDate>false</isEventDate>
        <isInternalOrganization>false</isInternalOrganization>
        <isRecordModified>false</isRecordModified>
        <usageTag>NONE</usageTag>
    </mktDataLakeFieldAttributes>
    <type>Text</type>
</CustomField>