force-app/main/default/objects/TestDataLakeObj_0108__dll/fields/policyholder__c.field-meta.xml
<CustomField>
    <fullName>policyholder__c</fullName>
    <label>policyholder</label>
    <length>60</length>
    <mktDataLakeFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <externalName>policyholder</externalName>
        <isEventDate>false</isEventDate>
        <isInternalOrganization>false</isInternalOrganization>
        <isRecordModified>false</isRecordModified>
        <usageTag>NONE</usageTag>
    </mktDataLakeFieldAttributes>
    <type>Text</type>
</CustomField>