force-app/main/default/objects/TestDataLakeObj_0108__dll/fields/previous_contract_number__c.field-meta.xml
<CustomField>
    <fullName>previous_contract_number__c</fullName>
    <label>previous_contract_number</label>
    <length>60</length>
    <mktDataLakeFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <externalName>previous_contract_number</externalName>
        <isEventDate>false</isEventDate>
        <isInternalOrganization>false</isInternalOrganization>
        <isRecordModified>false</isRecordModified>
        <usageTag>NONE</usageTag>
    </mktDataLakeFieldAttributes>
    <type>Text</type>
</CustomField>