force-app/main/default/objects/TestDataLakeObj_0108__dll/fields/total_premium__c.field-meta.xml
<CustomField>
    <fullName>total_premium__c</fullName>
    <label>total_premium</label>
    <mktDataLakeFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <externalName>total_premium</externalName>
        <isEventDate>false</isEventDate>
        <isInternalOrganization>false</isInternalOrganization>
        <isRecordModified>false</isRecordModified>
        <usageTag>NONE</usageTag>
    </mktDataLakeFieldAttributes>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>